@@ -7,6 +7,7 @@ cache_store
 *.iml
 dependency-reduced-pom.xml
 admin_token
+/sandbox/
 /bin/
 /db.sqlite
 /lite/liteDB.sqlite
